tests/NormalTests/paczka1/fuzzy1/86201413.err
Error in line 1: dAT S441 82,5
Error in line 2: Idbwx066qkn A136 44,3
Error in line 9: Idbwx066qkn S441 54,6
Error in line 8: A136 S441 33,9
Error in line 10: Idbwx066qkn A136 19,5
Error in line 13: ZNr S441 197,2
Error in line 24: ZNr A759 15,0
Error in line 23: GALJ A136 44,5
Error in line 31: BQZwIsKToY A136 -3,2
Error in line 28: ZNr A136 79,5
Error in line 38: ZNr A305 34,7
